# argus

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
argus/: CONTEXT.md  __init__.py  __main__.py  architecture.drawio  architecture.md  cli.py  config.py  router.py  runtime-topology.md  system_goal.txt
argus/agents/: __init__.py  design.md  llm.py  orchestrator.py  system_goal.txt
argus/contracts/: interaction-agents.md  mcp-pattern.md  memory-interaction.md  models.py
argus/enrich/: __init__.py  __main__.py  extractor.py  llm.py
argus/interaction/: cli.py  design.md  system_goal.txt
argus/knowledge/: __init__.py  query.py  rag.py
argus/memory/: design.md  system_goal.txt
argus/memory/graph/: design.md  lifecycle.md  mcp.md  memory-model.md
argus/store/: __init__.py  importer.py  neo4j_store.py
argus/workspace/: __init__.py  loader.py  models.py  registry.py  session.py
jarvis/: __init__.py  __main__.py  cli.py  router.py
jarvis/knowledge/: __init__.py  query.py  rag.py
jarvis/workspace/: __init__.py  loader.py  models.py  registry.py  session.py
scripts/: backup.sh  setup-neo4j.sh
tests/: test_workspace.py
workspaces/cressida/: graph.yaml  workspace.yaml
workspaces/cressida/docs/: build-log.md  cam-timing.md
workspaces/valkyrie/: graph.yaml  workspace.yaml
workspaces/valkyrie/docs/: build-notes.md
