[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.0.1"
description = "Voice-navigable, context-aware garage assistant (workspace system)"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
