[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "0.0.1"
description = "Voice-navigable, context-aware garage assistant (workspace system)"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "neo4j>=6.0", "claude-agent-sdk>=0.2"]

[project.scripts]
argus = "argus.cli:main"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
